oldFiles/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> variablesGlobales declaracionEstructuras declaracionFuncion declaraMain
Rule 2     variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales
Rule 3     variablesGlobales -> empty
Rule 4     declaracionVariable -> tipoDatos ID ASIG tipoValores
Rule 5     declaracionVariable -> declaracionArreglo
Rule 6     declaracionVariable -> declaracionVariable C declaracionVariable
Rule 7     declaracionVariable -> empty
Rule 8     tipoDatos -> INT
Rule 9     tipoDatos -> CHAR
Rule 10    tipoDatos -> STRING
Rule 11    tipoDatos -> BOOL
Rule 12    tipoDatos -> FLOAT
Rule 13    tipoDatos -> VOID
Rule 14    tipoValores -> NUMERO
Rule 15    tipoValores -> FLOAT_VALOR
Rule 16    tipoValores -> CHAR_VALOR
Rule 17    tipoValores -> STRING_VALOR
Rule 18    tipoValores -> TRUE
Rule 19    tipoValores -> FALSE
Rule 20    declaracionArreglo -> ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC
Rule 21    declaracionArreglo -> ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC CORA NUMERO CORC
Rule 22    declaracionArreglo -> ABIRRAY tipoDatos ID
Rule 23    declaracionEstructuras -> ABISTRUCT ID LLAVEA declaracionVariable LLAVEC PC declaracionEstructuras
Rule 24    declaracionEstructuras -> empty
Rule 25    declaracionFuncion -> tipoDatos ID PARENTA declaracionParametros PARENTC LLAVEA listaInst return LLAVEC declaracionFuncion
Rule 26    declaracionFuncion -> empty
Rule 27    declaracionParametros -> tipoDatos ID
Rule 28    declaracionParametros -> declaracionParametros C declaracionParametros
Rule 29    declaracionParametros -> empty
Rule 30    declaraMain -> ABIMAIN LLAVEA listaInst LLAVEC
Rule 31    declaracionCiclo -> ABIJOR PARENTA inicializacion PC cond PC cambio PARENTC LLAVEA listaInst LLAVEC declaracionCiclo
Rule 32    declaracionCiclo -> empty
Rule 33    inicializacion -> INT ID ASIG NUMERO
Rule 34    inicializacion -> ID ASIG NUMERO
Rule 35    cond -> ID operadores ID
Rule 36    cond -> ID operadores NUMERO
Rule 37    operadores -> LT
Rule 38    operadores -> LTE
Rule 39    operadores -> GTE
Rule 40    operadores -> GT
Rule 41    cambio -> ID ASIG ID AGREGA ID
Rule 42    cambio -> ID ASIG ID RESTA ID
Rule 43    cambio -> ID ASIG ID AGREGA NUMERO
Rule 44    cambio -> ID ASIG ID RESTA NUMERO
Rule 45    cambio -> ID INCREMENTO
Rule 46    cambio -> ID DECREMENTO
Rule 47    declaracionIf -> ABIF PARENTA condicion PARENTC LLAVEA listaInst LLAVEC declaracionElse declaracionIf
Rule 48    declaracionIf -> ABIF PARENTA condicion PARENTC LLAVEA listaInst LLAVEC declaracionIf
Rule 49    declaracionIf -> empty
Rule 50    declaracionElse -> ELSE LLAVEA listaInst LLAVEC
Rule 51    condicion -> ID operadoresRel ID operadoresLogicos condicion
Rule 52    condicion -> ID operadoresRel ID
Rule 53    condicion -> ID
Rule 54    condicion -> tipoValores
Rule 55    condicion -> ID operadoresRel tipoValores operadoresLogicos condicion
Rule 56    condicion -> ID operadoresRel tipoValores
Rule 57    condicion -> NOT ID operadoresRel ID operadoresLogicos condicion
Rule 58    condicion -> NOT ID operadoresRel ID
Rule 59    condicion -> NOT ID operadoresRel tipoValores operadoresLogicos condicion
Rule 60    condicion -> NOT ID operadoresRel tipoValores
Rule 61    condicion -> ID operadoresRel NOT ID operadoresLogicos condicion
Rule 62    condicion -> ID operadoresRel NOT ID
Rule 63    condicion -> ID operadoresRel NOT tipoValores operadoresLogicos condicion
Rule 64    condicion -> ID operadoresRel NOT tipoValores
Rule 65    condicion -> NOT PARENTA condicion PARENTC
Rule 66    operadoresLogicos -> AND
Rule 67    operadoresLogicos -> OR
Rule 68    operadoresRel -> LT
Rule 69    operadoresRel -> LTE
Rule 70    operadoresRel -> GT
Rule 71    operadoresRel -> GTE
Rule 72    operadoresRel -> NE
Rule 73    operadoresRel -> COMP
Rule 74    entradaDatos -> ABIN PARENTA ID PARENTC PC entradaDatos
Rule 75    entradaDatos -> empty
Rule 76    salidaDatos -> ABOUT PARENTA STRING_VALOR PARENTC salidaDatos PC
Rule 77    salidaDatos -> ABOUT PARENTA listaSalida PARENTC salidaDatos PC
Rule 78    salidaDatos -> ABOUT PARENTA STRING_VALOR C listaSalida PARENTC PC salidaDatos
Rule 79    salidaDatos -> empty
Rule 80    listaSalida -> ID C listaSalida
Rule 81    listaSalida -> ID
Rule 82    operacionesBasicas -> ID ASIG ID operadoresBasicos ID PC operacionesBasicas
Rule 83    operacionesBasicas -> ID ASIG tipoValores operadoresBasicos ID PC operacionesBasicas
Rule 84    operacionesBasicas -> ID ASIG tipoValores operadoresBasicos tipoValores PC operacionesBasicas
Rule 85    operacionesBasicas -> ID ASIG ID operadoresBasicos tipoValores PC operacionesBasicas
Rule 86    operacionesBasicas -> ID ASIG tipoValores PC operacionesBasicas
Rule 87    operacionesBasicas -> ID ASIG ID P ID PC operacionesBasicas
Rule 88    operacionesBasicas -> ID ASIG ID PC operacionesBasicas
Rule 89    operacionesBasicas -> ID P ID PC operacionesBasicas
Rule 90    operacionesBasicas -> ID ASIG ID CORA NUMERO CORC PC operacionesBasicas
Rule 91    operacionesBasicas -> ID CORA NUMERO CORC ASIG ID CORA NUMERO CORC PC operacionesBasicas
Rule 92    operacionesBasicas -> ID CORA NUMERO CORC ASIG tipoValores PC operacionesBasicas
Rule 93    operacionesBasicas -> ID PARENTA listaValores PARENTC PC operacionesBasicas
Rule 94    operacionesBasicas -> ID ASIG ID PARENTA listaValores PARENTC PC operacionesBasicas
Rule 95    operacionesBasicas -> empty
Rule 96    listaValores -> tipoValores
Rule 97    listaValores -> ID
Rule 98    listaValores -> listaValores C listaValores
Rule 99    listaValores -> empty
Rule 100   operadoresBasicos -> AGREGA
Rule 101   operadoresBasicos -> RESTA
Rule 102   operadoresBasicos -> MULT
Rule 103   operadoresBasicos -> DIV
Rule 104   declaraStruct -> ABIDECLARA ID ID PC declaraStruct
Rule 105   declaraStruct -> empty
Rule 106   listaInstrucciones -> entradaDatos salidaDatos declaraStruct declaracionVariable operacionesBasicas declaracionIf declaracionCiclo
Rule 107   listaInst -> listaInstrucciones
Rule 108   listaInst -> listaInstrucciones listaInst
Rule 109   listaInst -> empty
Rule 110   return -> RETURN ID PC
Rule 111   return -> RETURN PC
Rule 112   empty -> <empty>

Terminals, with rules where they appear

ABIDECLARA           : 104
ABIF                 : 47 48
ABIJOR               : 31
ABIMAIN              : 30
ABIN                 : 74
ABIRRAY              : 20 21 22
ABISTRUCT            : 23
ABIWORLD             : 2
ABOUT                : 76 77 78
AGREGA               : 41 43 100
AND                  : 66
ASIG                 : 4 20 21 33 34 41 42 43 44 82 83 84 85 86 87 88 90 91 92 94
BOOL                 : 11
C                    : 6 28 78 80 98
CHAR                 : 9
CHAR_VALOR           : 16
COMP                 : 73
CORA                 : 20 21 21 90 91 91 92
CORC                 : 20 21 21 90 91 91 92
DECREMENTO           : 46
DIV                  : 103
ELSE                 : 50
FALSE                : 19
FLOAT                : 12
FLOAT_VALOR          : 15
GT                   : 40 70
GTE                  : 39 71
ID                   : 4 20 21 22 23 25 27 33 34 35 35 36 41 41 41 42 42 42 43 43 44 44 45 46 51 51 52 52 53 55 56 57 57 58 58 59 60 61 61 62 62 63 64 74 80 81 82 82 82 83 83 84 85 85 86 87 87 87 88 88 89 89 90 90 91 91 92 93 94 94 97 104 104 110
INCREMENTO           : 45
INT                  : 8 33
LLAVEA               : 23 25 30 31 47 48 50
LLAVEC               : 23 25 30 31 47 48 50
LT                   : 37 68
LTE                  : 38 69
MULT                 : 102
NE                   : 72
NOT                  : 57 58 59 60 61 62 63 64 65
NUMERO               : 14 20 21 21 33 34 36 43 44 90 91 91 92
OR                   : 67
P                    : 87 89
PARENTA              : 25 31 47 48 65 74 76 77 78 93 94
PARENTC              : 25 31 47 48 65 74 76 77 78 93 94
PC                   : 2 23 31 31 74 76 77 78 82 83 84 85 86 87 88 89 90 91 92 93 94 104 110 111
RESTA                : 42 44 101
RETURN               : 110 111
STRING               : 10
STRING_VALOR         : 17 76 78
TRUE                 : 18
VOID                 : 13
error                : 

Nonterminals, with rules where they appear

cambio               : 31
cond                 : 31
condicion            : 47 48 51 55 57 59 61 63 65
declaraMain          : 1
declaraStruct        : 104 106
declaracionArreglo   : 5
declaracionCiclo     : 31 106
declaracionElse      : 47
declaracionEstructuras : 1 23
declaracionFuncion   : 1 25
declaracionIf        : 47 48 106
declaracionParametros : 25 28 28
declaracionVariable  : 2 6 6 23 106
empty                : 3 7 24 26 29 32 49 75 79 95 99 105 109
entradaDatos         : 74 106
inicializacion       : 31
listaInst            : 25 30 31 47 48 50 108
listaInstrucciones   : 107 108
listaSalida          : 77 78 80
listaValores         : 93 94 98 98
operacionesBasicas   : 82 83 84 85 86 87 88 89 90 91 92 93 94 106
operadores           : 35 36
operadoresBasicos    : 82 83 84 85
operadoresLogicos    : 51 55 57 59 61 63
operadoresRel        : 51 52 55 56 57 58 59 60 61 62 63 64
return               : 25
salidaDatos          : 76 77 78 106
start                : 0
tipoDatos            : 4 20 21 22 25 27
tipoValores          : 4 54 55 56 59 60 63 64 83 84 84 85 86 92 96
variablesGlobales    : 1 2

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . variablesGlobales declaracionEstructuras declaracionFuncion declaraMain
    (2) variablesGlobales -> . ABIWORLD declaracionVariable PC variablesGlobales
    (3) variablesGlobales -> . empty
    (112) empty -> .

    ABIWORLD        shift and go to state 3
    ABISTRUCT       reduce using rule 112 (empty -> .)
    INT             reduce using rule 112 (empty -> .)
    CHAR            reduce using rule 112 (empty -> .)
    STRING          reduce using rule 112 (empty -> .)
    BOOL            reduce using rule 112 (empty -> .)
    FLOAT           reduce using rule 112 (empty -> .)
    VOID            reduce using rule 112 (empty -> .)
    ABIMAIN         reduce using rule 112 (empty -> .)

    start                          shift and go to state 1
    variablesGlobales              shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> variablesGlobales . declaracionEstructuras declaracionFuncion declaraMain
    (23) declaracionEstructuras -> . ABISTRUCT ID LLAVEA declaracionVariable LLAVEC PC declaracionEstructuras
    (24) declaracionEstructuras -> . empty
    (112) empty -> .

    ABISTRUCT       shift and go to state 6
    INT             reduce using rule 112 (empty -> .)
    CHAR            reduce using rule 112 (empty -> .)
    STRING          reduce using rule 112 (empty -> .)
    BOOL            reduce using rule 112 (empty -> .)
    FLOAT           reduce using rule 112 (empty -> .)
    VOID            reduce using rule 112 (empty -> .)
    ABIMAIN         reduce using rule 112 (empty -> .)

    declaracionEstructuras         shift and go to state 5
    empty                          shift and go to state 7

state 3

    (2) variablesGlobales -> ABIWORLD . declaracionVariable PC variablesGlobales
    (4) declaracionVariable -> . tipoDatos ID ASIG tipoValores
    (5) declaracionVariable -> . declaracionArreglo
    (6) declaracionVariable -> . declaracionVariable C declaracionVariable
    (7) declaracionVariable -> . empty
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID
    (20) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC CORA NUMERO CORC
    (22) declaracionArreglo -> . ABIRRAY tipoDatos ID
    (112) empty -> .

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17
    ABIRRAY         shift and go to state 18
    PC              reduce using rule 112 (empty -> .)
    C               reduce using rule 112 (empty -> .)

    declaracionVariable            shift and go to state 8
    tipoDatos                      shift and go to state 9
    declaracionArreglo             shift and go to state 10
    empty                          shift and go to state 11

state 4

    (3) variablesGlobales -> empty .

    ABISTRUCT       reduce using rule 3 (variablesGlobales -> empty .)
    INT             reduce using rule 3 (variablesGlobales -> empty .)
    CHAR            reduce using rule 3 (variablesGlobales -> empty .)
    STRING          reduce using rule 3 (variablesGlobales -> empty .)
    BOOL            reduce using rule 3 (variablesGlobales -> empty .)
    FLOAT           reduce using rule 3 (variablesGlobales -> empty .)
    VOID            reduce using rule 3 (variablesGlobales -> empty .)
    ABIMAIN         reduce using rule 3 (variablesGlobales -> empty .)


state 5

    (1) start -> variablesGlobales declaracionEstructuras . declaracionFuncion declaraMain
    (25) declaracionFuncion -> . tipoDatos ID PARENTA declaracionParametros PARENTC LLAVEA listaInst return LLAVEC declaracionFuncion
    (26) declaracionFuncion -> . empty
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID
    (112) empty -> .

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17
    ABIMAIN         reduce using rule 112 (empty -> .)

    declaracionFuncion             shift and go to state 19
    tipoDatos                      shift and go to state 20
    empty                          shift and go to state 21

state 6

    (23) declaracionEstructuras -> ABISTRUCT . ID LLAVEA declaracionVariable LLAVEC PC declaracionEstructuras

    ID              shift and go to state 22


state 7

    (24) declaracionEstructuras -> empty .

    INT             reduce using rule 24 (declaracionEstructuras -> empty .)
    CHAR            reduce using rule 24 (declaracionEstructuras -> empty .)
    STRING          reduce using rule 24 (declaracionEstructuras -> empty .)
    BOOL            reduce using rule 24 (declaracionEstructuras -> empty .)
    FLOAT           reduce using rule 24 (declaracionEstructuras -> empty .)
    VOID            reduce using rule 24 (declaracionEstructuras -> empty .)
    ABIMAIN         reduce using rule 24 (declaracionEstructuras -> empty .)


state 8

    (2) variablesGlobales -> ABIWORLD declaracionVariable . PC variablesGlobales
    (6) declaracionVariable -> declaracionVariable . C declaracionVariable

    PC              shift and go to state 23
    C               shift and go to state 24


state 9

    (4) declaracionVariable -> tipoDatos . ID ASIG tipoValores

    ID              shift and go to state 25


state 10

    (5) declaracionVariable -> declaracionArreglo .

    PC              reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    C               reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    LLAVEC          reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ID              reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIF            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIJOR          reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIN            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABOUT           reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIDECLARA      reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    INT             reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    CHAR            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    STRING          reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    BOOL            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    FLOAT           reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    VOID            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIRRAY         reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    RETURN          reduce using rule 5 (declaracionVariable -> declaracionArreglo .)


state 11

    (7) declaracionVariable -> empty .

    PC              reduce using rule 7 (declaracionVariable -> empty .)
    C               reduce using rule 7 (declaracionVariable -> empty .)
    LLAVEC          reduce using rule 7 (declaracionVariable -> empty .)
    ID              reduce using rule 7 (declaracionVariable -> empty .)
    ABIF            reduce using rule 7 (declaracionVariable -> empty .)
    ABIJOR          reduce using rule 7 (declaracionVariable -> empty .)
    ABIN            reduce using rule 7 (declaracionVariable -> empty .)
    ABOUT           reduce using rule 7 (declaracionVariable -> empty .)
    ABIDECLARA      reduce using rule 7 (declaracionVariable -> empty .)
    INT             reduce using rule 7 (declaracionVariable -> empty .)
    CHAR            reduce using rule 7 (declaracionVariable -> empty .)
    STRING          reduce using rule 7 (declaracionVariable -> empty .)
    BOOL            reduce using rule 7 (declaracionVariable -> empty .)
    FLOAT           reduce using rule 7 (declaracionVariable -> empty .)
    VOID            reduce using rule 7 (declaracionVariable -> empty .)
    ABIRRAY         reduce using rule 7 (declaracionVariable -> empty .)
    RETURN          reduce using rule 7 (declaracionVariable -> empty .)


state 12

    (8) tipoDatos -> INT .

    ID              reduce using rule 8 (tipoDatos -> INT .)


state 13

    (9) tipoDatos -> CHAR .

    ID              reduce using rule 9 (tipoDatos -> CHAR .)


state 14

    (10) tipoDatos -> STRING .

    ID              reduce using rule 10 (tipoDatos -> STRING .)


state 15

    (11) tipoDatos -> BOOL .

    ID              reduce using rule 11 (tipoDatos -> BOOL .)


state 16

    (12) tipoDatos -> FLOAT .

    ID              reduce using rule 12 (tipoDatos -> FLOAT .)


state 17

    (13) tipoDatos -> VOID .

    ID              reduce using rule 13 (tipoDatos -> VOID .)


state 18

    (20) declaracionArreglo -> ABIRRAY . tipoDatos ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> ABIRRAY . tipoDatos ID ASIG CORA NUMERO CORC CORA NUMERO CORC
    (22) declaracionArreglo -> ABIRRAY . tipoDatos ID
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17

    tipoDatos                      shift and go to state 26

state 19

    (1) start -> variablesGlobales declaracionEstructuras declaracionFuncion . declaraMain
    (30) declaraMain -> . ABIMAIN LLAVEA listaInst LLAVEC

    ABIMAIN         shift and go to state 28

    declaraMain                    shift and go to state 27

state 20

    (25) declaracionFuncion -> tipoDatos . ID PARENTA declaracionParametros PARENTC LLAVEA listaInst return LLAVEC declaracionFuncion

    ID              shift and go to state 29


state 21

    (26) declaracionFuncion -> empty .

    ABIMAIN         reduce using rule 26 (declaracionFuncion -> empty .)


state 22

    (23) declaracionEstructuras -> ABISTRUCT ID . LLAVEA declaracionVariable LLAVEC PC declaracionEstructuras

    LLAVEA          shift and go to state 30


state 23

    (2) variablesGlobales -> ABIWORLD declaracionVariable PC . variablesGlobales
    (2) variablesGlobales -> . ABIWORLD declaracionVariable PC variablesGlobales
    (3) variablesGlobales -> . empty
    (112) empty -> .

    ABIWORLD        shift and go to state 3
    ABISTRUCT       reduce using rule 112 (empty -> .)
    INT             reduce using rule 112 (empty -> .)
    CHAR            reduce using rule 112 (empty -> .)
    STRING          reduce using rule 112 (empty -> .)
    BOOL            reduce using rule 112 (empty -> .)
    FLOAT           reduce using rule 112 (empty -> .)
    VOID            reduce using rule 112 (empty -> .)
    ABIMAIN         reduce using rule 112 (empty -> .)

    variablesGlobales              shift and go to state 31
    empty                          shift and go to state 4

state 24

    (6) declaracionVariable -> declaracionVariable C . declaracionVariable
    (4) declaracionVariable -> . tipoDatos ID ASIG tipoValores
    (5) declaracionVariable -> . declaracionArreglo
    (6) declaracionVariable -> . declaracionVariable C declaracionVariable
    (7) declaracionVariable -> . empty
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID
    (20) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC CORA NUMERO CORC
    (22) declaracionArreglo -> . ABIRRAY tipoDatos ID
    (112) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for ABIRRAY resolved as shift
    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17
    ABIRRAY         shift and go to state 18
    C               reduce using rule 112 (empty -> .)
    PC              reduce using rule 112 (empty -> .)
    LLAVEC          reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    ABIF            reduce using rule 112 (empty -> .)
    ABIJOR          reduce using rule 112 (empty -> .)
    ABIN            reduce using rule 112 (empty -> .)
    ABOUT           reduce using rule 112 (empty -> .)
    ABIDECLARA      reduce using rule 112 (empty -> .)
    RETURN          reduce using rule 112 (empty -> .)

  ! INT             [ reduce using rule 112 (empty -> .) ]
  ! CHAR            [ reduce using rule 112 (empty -> .) ]
  ! STRING          [ reduce using rule 112 (empty -> .) ]
  ! BOOL            [ reduce using rule 112 (empty -> .) ]
  ! FLOAT           [ reduce using rule 112 (empty -> .) ]
  ! VOID            [ reduce using rule 112 (empty -> .) ]
  ! ABIRRAY         [ reduce using rule 112 (empty -> .) ]

    declaracionVariable            shift and go to state 32
    tipoDatos                      shift and go to state 9
    declaracionArreglo             shift and go to state 10
    empty                          shift and go to state 11

state 25

    (4) declaracionVariable -> tipoDatos ID . ASIG tipoValores

    ASIG            shift and go to state 33


state 26

    (20) declaracionArreglo -> ABIRRAY tipoDatos . ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> ABIRRAY tipoDatos . ID ASIG CORA NUMERO CORC CORA NUMERO CORC
    (22) declaracionArreglo -> ABIRRAY tipoDatos . ID

    ID              shift and go to state 34


state 27

    (1) start -> variablesGlobales declaracionEstructuras declaracionFuncion declaraMain .

    $end            reduce using rule 1 (start -> variablesGlobales declaracionEstructuras declaracionFuncion declaraMain .)


state 28

    (30) declaraMain -> ABIMAIN . LLAVEA listaInst LLAVEC

    LLAVEA          shift and go to state 35


state 29

    (25) declaracionFuncion -> tipoDatos ID . PARENTA declaracionParametros PARENTC LLAVEA listaInst return LLAVEC declaracionFuncion

    PARENTA         shift and go to state 36


state 30

    (23) declaracionEstructuras -> ABISTRUCT ID LLAVEA . declaracionVariable LLAVEC PC declaracionEstructuras
    (4) declaracionVariable -> . tipoDatos ID ASIG tipoValores
    (5) declaracionVariable -> . declaracionArreglo
    (6) declaracionVariable -> . declaracionVariable C declaracionVariable
    (7) declaracionVariable -> . empty
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID
    (20) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC CORA NUMERO CORC
    (22) declaracionArreglo -> . ABIRRAY tipoDatos ID
    (112) empty -> .

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17
    ABIRRAY         shift and go to state 18
    LLAVEC          reduce using rule 112 (empty -> .)
    C               reduce using rule 112 (empty -> .)

    declaracionVariable            shift and go to state 37
    tipoDatos                      shift and go to state 9
    declaracionArreglo             shift and go to state 10
    empty                          shift and go to state 11

state 31

    (2) variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .

    ABISTRUCT       reduce using rule 2 (variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .)
    INT             reduce using rule 2 (variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .)
    CHAR            reduce using rule 2 (variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .)
    STRING          reduce using rule 2 (variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .)
    BOOL            reduce using rule 2 (variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .)
    FLOAT           reduce using rule 2 (variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .)
    VOID            reduce using rule 2 (variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .)
    ABIMAIN         reduce using rule 2 (variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales .)


state 32

    (6) declaracionVariable -> declaracionVariable C declaracionVariable .
    (6) declaracionVariable -> declaracionVariable . C declaracionVariable

  ! shift/reduce conflict for C resolved as shift
    PC              reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    LLAVEC          reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    ID              reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    ABIF            reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    ABIJOR          reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    ABIN            reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    ABOUT           reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    ABIDECLARA      reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    INT             reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    CHAR            reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    STRING          reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    BOOL            reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    FLOAT           reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    VOID            reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    ABIRRAY         reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    RETURN          reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .)
    C               shift and go to state 24

  ! C               [ reduce using rule 6 (declaracionVariable -> declaracionVariable C declaracionVariable .) ]


state 33

    (4) declaracionVariable -> tipoDatos ID ASIG . tipoValores
    (14) tipoValores -> . NUMERO
    (15) tipoValores -> . FLOAT_VALOR
    (16) tipoValores -> . CHAR_VALOR
    (17) tipoValores -> . STRING_VALOR
    (18) tipoValores -> . TRUE
    (19) tipoValores -> . FALSE

    NUMERO          shift and go to state 39
    FLOAT_VALOR     shift and go to state 40
    CHAR_VALOR      shift and go to state 41
    STRING_VALOR    shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    tipoValores                    shift and go to state 38

state 34

    (20) declaracionArreglo -> ABIRRAY tipoDatos ID . ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> ABIRRAY tipoDatos ID . ASIG CORA NUMERO CORC CORA NUMERO CORC
    (22) declaracionArreglo -> ABIRRAY tipoDatos ID .

    ASIG            shift and go to state 45
    PC              reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    C               reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    LLAVEC          reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    ID              reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    ABIF            reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    ABIJOR          reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    ABIN            reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    ABOUT           reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    ABIDECLARA      reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    INT             reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    CHAR            reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    STRING          reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    BOOL            reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    FLOAT           reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    VOID            reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    ABIRRAY         reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)
    RETURN          reduce using rule 22 (declaracionArreglo -> ABIRRAY tipoDatos ID .)


state 35

    (30) declaraMain -> ABIMAIN LLAVEA . listaInst LLAVEC
    (107) listaInst -> . listaInstrucciones
    (108) listaInst -> . listaInstrucciones listaInst
    (109) listaInst -> . empty
    (106) listaInstrucciones -> . entradaDatos salidaDatos declaraStruct declaracionVariable operacionesBasicas declaracionIf declaracionCiclo
    (112) empty -> .
    (74) entradaDatos -> . ABIN PARENTA ID PARENTC PC entradaDatos
    (75) entradaDatos -> . empty
